src/assets/css/styles.css
@import './cascadia-code.css';

:root {
	--gray: #959595;
	--svg-gray: invert() brightness(0.58);
}
:root, html[data-theme='light'] {
	--background-color: #ffffff;
	--background-color-header: #E9E9ED;
	--background-color-input: #E9E9ED;
	--text-color: #000000;
	--svg-filter: brightness(0);
	--svg-filter-light: brightness(0);
	--svg-filter-dark: none;
}
html[data-theme='dark'] {
	--background-color: #2b2b2b;
	--background-color-header: #242424;
	--background-color-input: #474747;
	--text-color: #ffffff;
	--svg-filter: brightness(0) invert();
	--svg-filter-light: none;
	--svg-filter-dark: brightness(0) invert();
}

*, html {
	font-family: 'Cascadia Code', sans-serif;
	color: var(--text-color);
}
input, button, select {
	background-color: var(--background-color-input)
}
body {
	margin: 0;
	background-color: var(--background-color);
}
header {
	top: 0;
	position: fixed;
	width: 100%;
	z-index: 100;
}
footer {
	text-align: center;
	padding-top: 24px;
	padding-bottom: 24px;
	cursor: default;
	width: 100%;
}
hr {
	margin: 1em 0;
	border: 2px solid;
	border-color: var(--gray);
}
main {
	margin-top: 53px;
	padding: 32px 24px 16px 24px;
}
h1, h2, h3, h4 { text-align: center }
h2 {
	margin: 0 10px;
}
[data-theme='light'] .display-light, [data-theme='dark'] .display-dark,
[data-theme-fancy='fancy'] .display-fancy, [data-theme-fancy='simple'] .display-not-fancy {
	display: block;
}
[data-theme='dark'] .display-light, [data-theme='light'] .display-dark,
[data-theme-fancy='simple'] .display-fancy, [data-theme-fancy='fancy'] .display-not-fancy {
	display: none;
}
.display-none { display: none; }

.filtered, .hover-filtered {
	filter: var(--svg-filter);
}
.hover-filtered:hover {
	filter: none;
}
.light-filtered {
	filter: var(--svg-filter-light);
}
.dark-filtered {
	filter: var(--svg-filter-dark);
}
.skill-icon {
	text-decoration: none;
	margin: 4px;
}
.skill-icon img, img.skill-icon {
	height: 48px;
	width: 48px;
}
.copyright {
	font-size: 75%;
}

.no-save-img {
	pointer-events: none;
}

.bubbleSections {
	text-align: center;
	margin: auto;
	width: max-content;
	max-width: 100%;

	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}
.bubbleLinks {
	text-align: center;
	min-width: 300px;
	width: max-content;
	flex-direction: column;
}
.bubbleLink, .bubbleHeader {
	margin: 6px;
	padding: 6px 18px 6px 6px;
}
.bubbleHeader {
	height: 46px;
	line-height: 46px;
}
.bubbleLink {
	border: 2px solid;
	border-radius: 6px;
	border-color:var(--gray);
	background-color: var(--background-color-input);
	display: flex;
	text-decoration: none;
	cursor: pointer;
	height: 42px;
	line-height: 42px;
	font-size: 18px;
}
.bubbleLinkIcon {
	margin: 0 6px 0 0;
	width: 42px;
	height: 42px;
	object-fit: contain;
}

.bubbleCredit {
	display: block;
	text-align: center;
	height: max-content;
	margin: auto;
}
.bubbleCreditTitle {
	text-align: center;
	font-size: 16px;
	line-height: 16px;
}
.bubbleCreditSubtitle {
	text-align: center;
	font-size: 14px;
	line-height: 14px;
	display: flex;
	justify-content: center;
}
.bubbleCreditLink {
	text-decoration: underline;
	cursor: pointer;
	margin: 0 0 0 6px;
}
.bubbleCreditLicenseInner, .bubbleCreditLicenseOuter {
	width: 14px;
	height: 14px;
	line-height: 14px;
}
.bubbleCreditLicenseOuter {
	margin: 0 0 -2px 2px;
}

.tooltip {
	position: relative;
	display: flex;
	justify-content: center;
}

.tooltip .tooltipText {
	visibility: hidden;
	width: max-content;
	max-width:300px;
	background-color: var(--background-color-input);
	filter: drop-shadow(2px 0px var(--gray))
	drop-shadow(0px 2px var(--gray))
	drop-shadow(-2px 0px var(--gray))
	drop-shadow(0px -2px var(--gray));
	text-align: center;
	border-radius: 6px;
	padding: 5px 0;
	position: absolute;
	z-index: 1;
	bottom: 24px;
	margin: 0 auto;
	font-size: 14px;
	line-height: 14px;
}

.tooltip .tooltipText::after {
	content: "";
	position: absolute;
	top: 100%;
	left: 50%;
	margin-left: -5px;
	border-width: 5px;
	border-style: solid;
	border-color: var(--background-color-input) transparent transparent transparent;
}

.tooltip:hover .tooltipText {
	visibility: visible;
}

.showcase-group {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-wrap: wrap;
}
.art-showcase {
	height: 380px;
	width: 300px;
	margin: 4px;
	padding: 16px;
	border: 8px solid;
	border-color: var(--gray);
	border-radius: 16px;
}
.showcase {
	min-height: 360px;
	max-height: max-content;
	width: 560px;
	margin: 4px;
	padding: 16px;
	display: flex;
	border: 8px solid;
	border-color: var(--gray);
	border-radius: 16px;
}
.showcase-gallery {
	flex: 1;
	width: 300px;
	max-width: 300px;
	height: 300px;
	float: left;
}
.showcase-little-text {
	font-size: 10px;
}
.showcase-read-more {
	display:flex;
	align-items:center;
	justify-content:center;
	flex-wrap:wrap;
	height:22px;
	margin-top:10px;
}
.commission-description {
	flex: 1;
}
.showcase .carousel-inner model-viewer {
	width: 300px;
	height: 300px;
}
.showcase-tags {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-wrap: wrap;

	margin-top: 4px;
	float: none;
	width: 100%;
	height: 18px;
	scroll-behavior: auto;
}
.showcase-tag {
	font-size: 10px;
	line-height: 10px;
	float: left;
	margin: 2px;
	padding: 2px 6px;
	border-radius: 4px;
	background-color: var(--background-color-input);
	color: var(--text-color);
	width: max-content;
	white-space: nowrap;
	height: 14px;
}
.showcase-description {
	margin-top: 8px;
	margin-bottom: 0;
	padding-left: 20px;
}
/* Slides */
.slide {
	width: 100%;
	height: 100%;
	object-fit: scale-down;
}
.swiper {
	width: 100%;
	height: 100%;
}
.swiper-slide {
	justify-content: center;
	align-items: center;
}
.swiper-button-next, .swiper-button-prev {
	color:var(--gray)!important;
}
.swiper-pagination, .swiper-pagination-bullets, .swiper-pagination-horizontal {
	bottom:0;
}
.carousel-indicators {
	position: absolute;
	bottom: -48px;
	left: 50%;
	z-index: 15;
	width: 60%;
	padding-left: 0;
	margin-left: -30%;
	text-align: center;
	list-style: none;
}
.swiper-pagination-bullet, .swiper-pagination-bullet-active {
	display: inline-block;
	width: 10px!important;
	height: 10px!important;
	margin: 1px!important;
	text-indent: -999px;
	cursor: pointer;
	background-color: var(--background-color)!important;
	border: 1px solid;
	border-radius: 10px;
	border-color: var(--gray)!important;
	opacity:100%!important;
}
.swiper-pagination-bullet-active {
	width: 12px;
	height: 12px;
	margin: 0;
	background-color: var(--gray)!important;
}

/* Bootstrap Carousel */
.carousel-inner > .item > img,
.carousel-inner > .item > a > img {
	display: block;
	max-width: 100%;
	height: auto;
}
.carousel {
	position: relative;
}
.carousel-inner {
	position: relative;
	width: 100%;
	overflow: hidden;
}
.carousel-inner > .item {
	position: relative;
	display: none;
	-webkit-transition: 0.6s ease-in-out left;
	-o-transition: 0.6s ease-in-out left;
	transition: 0.6s ease-in-out left;
}
.carousel-inner > .item > img,
.carousel-inner > .item > a > img {
	line-height: 1;
}
.carousel-inner > .active, .carousel-inner > .next, .carousel-inner > .prev {
	display: block;
}
.carousel-inner > .active {
	left: 0;
}
.carousel-inner > .next,
.carousel-inner > .prev {
	position: absolute;
	top: 0;
	width: 100%;
}
.carousel-inner > .next {
	left: 100%;
}
.carousel-inner > .prev {
	left: -100%;
}
.carousel-inner > .next.left,
.carousel-inner > .prev.right {
	left: 0;
}
.carousel-inner > .active.left {
	left: -100%;
}
.carousel-inner > .active.right {
	left: 100%;
}
.carousel-control {
	position: absolute;
	cursor: pointer;
	top: 0;
	bottom: 0;
	left: 0;
	width: 15%;
	font-size: 20px;
	text-align: center;
}
.carousel-control.left {
}
.carousel-control.right {
	right: 0;
	left: auto;
}
.carousel-control img {
	height: 48px;
	width: 48px;
	position: absolute;
	top: 50%;
	z-index: 5;
	display: inline-block;
	margin-top: -10px;
	filter: var(--svg-gray);
}
.carousel .left img {
	left: 50%;
	margin-left: -10px;
}
.carousel .right img {
	right: 50%;
	margin-right: -10px;
}

